# ps-housetech-backend

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  app.py  cris-translation.yaml  docker-compose.yml  graphql.txt  pyproject.toml  secrets.env
.gitlab/: .gitlab-ci.yml  CODEOWNERS  badges.yaml  deploy.yaml  info.yaml  pre-commit.yaml  release.yaml  tests.yaml
nginx/: Dockerfile
src/: Main.py  Run.py  exchange.py  run.py
src/api/: Routes.py  __init__.py  calendar.py  models.py  routes.py
src/backend/: Example.py
src/batch/: manage.py
src/resources/: BusInfo.py  __init__.py  bustracker.py  cris.en.yaml  cris.py  drupal.py  eink_image.py  einkgenerator.py  event.py  exchange.py  html_factory.py  instagram.py  mensa.py  picture.py  proxy_config.py  resources - Verknüpfung.lnk  tracker.py  weather.py
src/resources/static/: DoorsignSeed.html
src/resources/static/image_gen/: DoorsignSeed.html
src/resources/template/: index.html
src/templates/: index.html
static/: styles.css
templates/: index.html
tests/: conftest.py  test_API.py  test_Example.py  test_bustracker.py  test_cris.py  test_einkgenerator.py  test_exchange.py  test_instagram.py  test_mensa.py  test_mensa2.py  test_weather.py
tests/resources/: get_fused_layers_output.txt  get_layer_output_RED.txt  get_layer_output_WHITE.txt  picture1.npy
~/.git-template/hooks/: pre-commit
